Fix for misalignment

--- a/assets/styles/player/canvas.less
+++ b/assets/styles/player/canvas.less
@@ -24,7 +24,7 @@ video,canvas,
 	.canvas-row {
 		display: flex;
 		flex-direction: row;
-		height: 33.3%;
+		height: 33.3333%;
 
 		canvas {
 			width: 25%;
